[FEAT] 분철 MVP 전환 — 경매/PG 제거·고정가 선착순·수동 입금확인 (#46)
* chore: 경매·PG(Toss) 결제 모듈 및 입금확인 서비스 제거
* feat: 분철 도메인·상태머신·VO 및 영속 계층 MVP 재정의
* feat: 참여 라이프사이클·분철 관리/조회 API 재구성
* feat: 마감 판정·입금 만료 스케줄러 개편
* feat: 알림(알림톡/수신함) MVP 리와이어 및 입금 만료 자동취소 알림
* refactor: buncheol application 레이어를 하위 도메인 패키지로 분리
* chore: 입금 만료 스케줄러 설정·알림 템플릿코드 추가 및 MVP 설계 문서
* refactor: 입금 만료 CAS 메서드명을 confirm/cancel 패턴과 통일
* feat: 분철 마감시간 정각 강제 및 자동마감 fallback 간격 완화
* feat: 개최자 입금확인요청 알림 제거 및 분철 취소사유 구분, 알림·설정 정리
* fix: 분철 취소 알림 중복 레이스 수정 및 참여 자발취소 API 제거
* fix: 찜 목록 마감 임박순 정렬을 모집중 우선 그룹 정렬로 수정
* fix: 분철 공개 목록 정렬을 모집중 우선 그룹 정렬로 수정
* feat: 분철 공개 목록 카드에 status 추가
* docs: 찜 목록 상태값·정렬 설명 현행화
* feat: 분철 개최·수정 시 이미지 최소 1장 필수 검증
* fix: 마감 판정 count-전이 레이스를 단일 CAS로 원자화