@@ -1,7 +1,5 @@
 package buncheoleasy.buncheol.domain.participation;
 
-import java.util.Collections;
-import java.util.EnumSet;
 import java.util.Set;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
@@ -9,22 +7,20 @@ import lombok.RequiredArgsConstructor;
 @Getter
 @RequiredArgsConstructor
 public enum ParticipationStatus {
-  ACTIVE_BID("제시 진행 중"),
-  AWAITING_PAYMENT("낙찰자 결제 대기"),
-  PAYMENT_REPORTED("입금 완료 신고"),
+  // 참여(슬롯 점유) 직후. 개최자 계좌가 노출되고 입금 만료(dueAt)까지 호스트의 수동 입금확인을 기다리는 상태.
+  AWAITING_PAYMENT("입금 확인 중"),
+  // 개최자가 입금을 수동 확인한 상태. 분철 진행 최소 인원 카운트 대상이며, 분철 진행 시 배송 대상이 된다.
   CONFIRMED("참여 확정"),
-  CANCELLED("참여 취소"),
-  FAILED("참여 실패");
+  // 종료 상태. 취소 사유는 ParticipationCancelReason 로 구분한다 (입금 시간 초과 / 자발 취소 / 모집 마감 / 분철 취소).
+  CANCELLED("참여 취소");
 
   private final String description;
 
-  // 분철이 RECRUITING 일 때 존재할 수 있는 활성 참여 상태들. 호스트 분철 cancel cascade 대상.
-  // 향후 RECRUITING 단계에 새 활성 상태가 추가되면 이 집합에 함께 등록한다 (최소 한 개는 유지).
-  // 외부 호출자가 mutate 하지 못하도록 unmodifiable view 로 노출한다.
-  private static final Set<ParticipationStatus> ACTIVE_UNDER_RECRUITING =
-      Collections.unmodifiableSet(EnumSet.of(ACTIVE_BID));
+  // 멤버 슬롯을 점유한 '살아있는' 참여 상태들. 선착순 중복 점유 가드(generated column),
+  // 분철 취소 시 cascade 대상, 탈퇴 가드, 참여자 수 집계의 공통 기준이다.
+  private static final Set<ParticipationStatus> ACTIVE = Set.of(AWAITING_PAYMENT, CONFIRMED);
 
-  public static Set<ParticipationStatus> activeUnderRecruiting() {
-    return ACTIVE_UNDER_RECRUITING;
+  public static Set<ParticipationStatus> active() {
+    return ACTIVE;
   }
 }
